--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,73 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+.core {
+  fill: var(--background-color);
+  transition: fill 0.3s linear 0.03s;
+}
+
+.main-body {
+  fill: var(--background-color);
+  transition: fill 0.3s linear; 
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon:hover .core {
+  fill: var(--contour-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+  fill: red;
+  transition: fill 0.3s linear 0.03s;
+}
+
+.like-icon:active .main-body {
+  fill: red;
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .core {
+  fill: red;
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: red;
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .contour { 
+  fill: red;
+  transition: fill 0.3s linear 0.06s; 
+}
+
+.like-icon.is-liked .heart {
+  animation: bigger 0.3s ease-in 0.1s forwards alternate-reverse;
+  transform-origin: center;
+}
+
+@keyframes bigger {
+  to {
+    transform: scale(1.5);
+  }
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s ease-in 0.3s forwards alternate-reverse;
+}
+
+@keyframes sparks {
+  to {
+    opacity: 1;
+  }
+}
