--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,52 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-light {
+  --background-image:   repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px), 
+  repeating-linear-gradient(0deg, #d3d3d3 0 2px, transparent 2px 4px), 
+  linear-gradient( #e7e7e7 0%, #e7e7e7 0.1%, #1a1a1a 100%);
+  background-attachment: fixed;
+  background-size: cover;
+  --background-color: #fff;
+  --accent-color: #000;
+  --contour-color: #000;
+}
+
+@media(prefers-color-scheme:light) {
+  :root {
+  --background-image: repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px), 
+  repeating-linear-gradient(0deg, #d3d3d3 0 2px, transparent 2px 4px), 
+  linear-gradient( #e7e7e7 0%, #e7e7e7 0.1%, #1a1a1a 100%);
+  background-attachment: fixed;
+  background-size: cover;
+  --background-color: #fff;
+  --accent-color: #000;
+  --button-text-color: #fff;
+  }
+}
+
+:root.theme-dark {
+  --background-image: repeating-linear-gradient(to right, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
+  repeating-linear-gradient(to bottom, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
+  linear-gradient(to bottom, #007f0c .01%, #004306);
+  background-attachment: fixed;
+  background-size: cover;
+  --background-color: #000;
+  --accent-color: #00cc14;
+  --button-text-color: #00cc14;
+  --contour-color: #00cc14;
+}
+
+@media(prefers-color-scheme:dark) {
+  :root {
+  --background-image: repeating-linear-gradient(to right, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
+  repeating-linear-gradient(to bottom, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
+  linear-gradient(to bottom, #007f0c .01%, #004306);
+  background-attachment: fixed;
+  background-size: cover;
+  --background-color: #000;
+  --accent-color: #00cc14;
+  --button-text-color: #00cc14;
+  --contour-color: #00cc14;
+  }
+}
