--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,4 +6,5 @@
   --text-weight: 400;
   background-image: var(--background-image);
   --sparks-color: red;
+  --contour-color: var(--accent-color);
 }
