--- a/styles/style.css
+++ b/styles/style.css
@@ -15,18 +15,14 @@
 */
 
 .page {
-  inline-size: clamp(20rem, 13.2857rem + 33.5714vw, 43.5rem);
+  inline-size: clamp(23.4375rem, 16.3732rem + 30.1408vw, 43.5rem);
   background-image: var(--background-image);
+  background-color: var(--background-color);
   background-attachment: fixed;
   margin: 0px auto;
   padding-block-start: 100px;
   font-family: var(--main-font-family, "Inter-Variable", sans-serif);
-}
-
-@supports (font-variation-settings: normal) {
-  .page {
-    font-family: "Inter-Variable", sans-serif;
-  }
+  font-variation-settings: 'wght' var(--title-weight) 'wght' var(--text-weight);
 }
 
 .header {
@@ -41,13 +37,13 @@
   color: var(--accent-color);
 }
 
-.header__title {
+.header__logo{
   font-family: var(--decorate-font-family);
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   text-transform: uppercase;
 }
 
-.header__subtitle {
+.header__title {
   font-family: var(--decorate-font-family);
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   text-transform: uppercase;
@@ -75,6 +71,8 @@
 .theme-menu__button:after {
   content: "";
   position: absolute;
+  bottom: -2px;
+  left: 2px;
   display: block;
   background: currentColor;
   transition: transform 0.3s ease;
@@ -106,6 +104,8 @@
 .theme-menu__button:disabled:before {
   content: "▶";
   position: absolute;
+  left: -15px;
+  top: 1px;
   animation: pulse 0.5s infinite alternate ease-in-out;
 }
 
@@ -125,8 +125,19 @@
   gap: 49px;
 }
 
+.article {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background-color);
+  border: 2px solid var(--accent-color);
+  color: var(--accent-color);
+  font-family: var(--main-font-family);
+}
+
 .article__card {
   position: relative;
+  border-top: 2px solid var(--accent-color);
+  border-bottom: 2px solid var(--accent-color);
 }
 
 .card__label {
@@ -155,60 +166,45 @@
   }
 }
 
-.article {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--background-color);
-  border: 2px solid var(--accent-color);
-  color: var(--accent-color);
-}
-
 .article__title {
   color: var(--accent-color);
-  padding: 5px 10px;
+  padding: 4px 7px;
   font-weight: var(--title-weight);
   font-size: 18px;
-}
-
-.article__card {
-  border-top: 2px solid var(--accent-color);
-  border-bottom: 2px solid var(--accent-color);
 }
 
 .article__text {
   display: flex;
   flex-direction: column;
-  gap: 25px;
-  font-family: var(--main-font-family);
+  gap: 28px;
   font-weight: var(--text-weight);
   font-size: 18px;
-  padding: 30px 25px 0;
+  padding: 30px 23px 0;
 }
 
 .card__image {
   display: block;
   inline-size: 100%;
   block-size: 100%;
-  -o-object-fit: cover;
-  -o-object-position: center;
+  object-fit: cover;
+  object-position: center;
 }
 
 .button-like-container {
   display: flex;
   justify-content: end;
   align-items: center;
-  margin: 25px 25px 25px 0;
+  margin: 25px 25px 22px;
+  gap: 5px;
 }
 
 /* кнопка с сердечком */
 .card__icon-button {
   cursor: pointer;
-  background: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background: var(--background-color);
   border: none;
-  height: 38px;
+  transition: border 0.3s ease;
+  padding-inline-end: 2px;
 }
 
 .card__icon-button:focus {
@@ -217,26 +213,30 @@
 
 .card__icon-button:focus-visible {
   border: 2px solid var(--accent-color);
-  transition: border 0.3s ease;
 }
 
-.card__like-button {
+/* кнопки с текстом */
+.button {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 130px;
+  width: 129px;
   height: 38px;
-  background-color: transparent;
+  background-color: var(--background-color);
   border: 2px solid var(--accent-color);
   cursor: pointer;
   transition: 0.5s ease-in-out;
   overflow: hidden;
+  color: var(--button-text-color);
+  transition: box-shadow 0.3s ease;
 }
 
-.card__like-button::before {
+.button::before {
   content: "";
   position: absolute;
+  top: 0px;
+  left: 0px;
   display: block;
   width: 100%;
   height: 100%;
@@ -246,56 +246,30 @@
   transition: transform 0.5s ease-in-out;
 }
 
-.card__like-button:hover::before {
+.button:hover::before {
   transform: translateX(0);
 }
 
-.card__like-button:focus {
+.button:focus {
   outline: none;
+}
+
+.button:focus-visible {
   box-shadow: 2px 2px 0 var(--accent-color);
-  transition: box-shadow 0.3s ease;
 }
 
 .button__text {
-  position: relative;
   font-family: var(--decorate-font-family);
   font-size: 14px;
   mix-blend-mode: difference;
-  color: var(--button-text-color);
 }
 
 .save-button {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 8px;
-  margin: 50px auto;
+  margin: 0 auto 55px;
   inline-size: 340px;
   block-size: 53px;
-  background-color: var(--background-color);
-  border: 2px solid var(--accent-color);
-  cursor: pointer;
-  transition: 0.5s ease-in-out;
-  overflow: hidden;
-  color: var(--button-text-color);
-}
-
-.save-button::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--accent-color);
-  overflow: hidden;
-  transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out;
-}
-
-.save-button:hover::before {
-  transform: translateX(0);
 }
 
 .floppy-image {
@@ -309,12 +283,6 @@
   display: none;
   opacity: 0;
   pointer-events: none;
-}
-
-.save-icon {
-  width: 39px;
-  height: 39px;
-  color: var(--accent-color);
 }
 
 .modal-window {
@@ -336,6 +304,12 @@
   gap: 20px;
 }
 
+.modal__save-icon {
+  width: 39px;
+  height: 39px;
+  color: var(--accent-color);
+}
+
 .dialog__text {
   font-family: var(--decorate-font-family);
   font-size: 14px;
@@ -346,76 +320,42 @@
 }
 
 .ok-button {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
   width: 100%;
-  height: 38px;
-  background-color: var(--background-color);
-  border: 2px solid var(--accent-color);
-  cursor: pointer;
-  transition: 0.5s ease-in-out;
-  overflow: hidden;
-  color: var(--button-text-color);
   text-transform: uppercase;
 }
 
-.ok-button::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--accent-color);
-  overflow: hidden;
-  transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out;
-}
-
-.ok-button:hover::before {
-  transform: translateX(0);
-}
-
-.ok-button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0 var(--accent-color);
-  transition: box-shadow 0.3s ease;
-}
-
 .modal-window::backdrop {
-  background-color: rgb(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 1);
+  opacity: 75%;
 }
 
 /* фильтры */
-.woman {
-  filter: opacity(90%);
+.filter-contrast {
+  filter: contrast(150%);
 }
 
-.glasses {
-  filter: sepia(50%);
+.filter-invert {
+  filter: invert(100%);
 }
 
-.car {
-  filter: hue-rotate(150deg) contrast(150%);
+.filter-saturate-hue-rotate {
+  filter: saturate(200%) hue-rotate(0.5turn);
 }
 
-.phone {
-  filter: blur(2px);
+.filter-sepia {
+  filter: sepia(100%) contrast(150%);
 }
 
-.cat {
-  filter: saturate(200%);
+.filter-multibright {
+  filter: brightness(200%) contrast(150%) hue-rotate(2.8turn);
 }
 
-.nerves {
-  filter: invert(20%) brightness(120%) saturate(300%);
+.filter-multiblur {
+  filter: blur(2px) grayscale(100%);
 }
 
-.woods {
-  filter: saturate(150%) grayscale(30%);
+.filter-multiopacity {
+  filter: opacity(80%) brightness(80%) contrast(300%);
 }
 
 @media (width <= 375px) {
@@ -425,23 +365,36 @@
 
   .header {
     padding-block-start: 120px;
-    padding-inline-start: 15px;
   }
 
-  .article:nth-child(8) .article__text {
-    padding: 24px 8px 24px 24px;
+  .theme-menu__list {
+    padding-inline-start: 20px;
+    padding-block-start: 4px;
+  }
+
+  .article__title {
+    padding: 5px 10px;
+  }
+
+  .card__label {
+    top: 24px;
+    right: 12px;
   }
 
   .article__text {
-    padding: 25px;
+    padding: 25px 25px 22px;
   }
-
-  .card__image {
-    min-block-size: 371px;
-  }
-
+  
   .button-like-container {
-    margin: 3px 8px 25px 0;
+    margin: 0 25px 22px;
+  }
+
+  .card__icon-button {
+    padding-block-start: 3px;
+  }
+
+  .card__like-button {
+    margin-block-start: 2px;
   }
 
   .save-button {
@@ -457,6 +410,5 @@
 
   .modal-window {
     inline-size: 341px;
-    block-size: 195px;
   }
 }
