--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@
   margin: 0px auto;
   padding-block-start: 100px;
   font-family: var(--main-font-family, "Inter-Variable", sans-serif);
-  font-variation-settings: 'wght' var(--title-weight) 'wght' var(--text-weight);
+  font-variation-settings: "wght" var(--title-weight) "wght" var(--text-weight);
 }
 
 .header {
@@ -37,7 +37,7 @@
   color: var(--accent-color);
 }
 
-.header__logo{
+.header__logo {
   font-family: var(--decorate-font-family);
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   text-transform: uppercase;
@@ -384,7 +384,7 @@
   .article__text {
     padding: 25px 25px 22px;
   }
-  
+
   .button-like-container {
     margin: 0 25px 22px;
   }
