--- a/styles/style.css
+++ b/styles/style.css
@@ -398,11 +398,11 @@
     margin: 0 25px 24px;
   }
 
-  .card__icon-button {
-    padding-block-start: 3px;
+  .card__like-button {
+    margin-block-start: 2px;
   }
 
-  .card__like-button {
+  .card__icon-button {
     margin-block-start: 2px;
   }
 
